# engram

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONSULTATION_PROMPTS.md  CONSULTATION_SYNTHESIS.md  CONSULTATION_SYSTEM_PLAN.md  PRIOR_ART.md  REQUIREMENTS.md  ROADMAP.md  SESSION_INTENT_SPEC.md  V1_1_SPEC.md
docs/consultations/: claude-self-review.md  conv-1fc34509440d.md  conv-471a58f949d1.md  conv-58477ae83cbe.md  conv-63e0f33c4097.md  conv-98ac3a859aba.md  conv-b21aeabe959e.md  conv-d55b0607ee5c.md  conv-dbdb45427bf7.md  conv-e0a5c4f6a8f1.md  gemini-20260223-131252.md  gemini-v1.1-20260223-144047.md  gemini-v1.1-20260223-144243.md  openai-20260223-131036.md  openai-v1.1-20260223-144027.md
docs/superpowers/plans/: 2026-04-23-phase-2b-plugin-verification.md  2026-07-06-area-tag.md  (+2 more)
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
scripts/: consult_agents.py  consult_gemini_v1_1.py  consult_v1_1.py  e2e_mcp_smoke.py
src/engram/: __init__.py  areas.py  bootstrap.py  briefing.py  checkpoint.py  cli.py  consult.py  context.py  formatting.py  gc.py  hooks.py  init.py  mcp_safe.py  mcp_server.py  models.py  providers.py  query.py  store.py
tests/: conftest.py  test_areas.py  test_bootstrap.py  test_briefing.py  test_checkpoint.py  test_cli.py  test_consult.py  test_context.py  test_gc.py  test_hooks.py  test_init.py  test_mcp_server.py  test_migration.py  test_plugin_config.py  test_providers.py  test_query.py  test_sessions.py  test_store.py
(+3 files in other folders)
